testdata/zkc/invalid/basic_invalid_08.zkc
;;error:3:12-13:unexpected token
function f(x:u8) -> (r:u8) {
  r = (x + )
  return
}
